--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,14 +1,20 @@
 name: CD - Déploiement sur GitHub Pages
+
 on:
-  push:
-    branches: [ "main" ]
+  workflow_run:
+    workflows: ["CI - Vérification HTML"]
+    types:
+      - completed
 
 jobs:
   Deploiement:
-    runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    runs-on: self-hosted
+
     steps:
       - name: Récupération du code
         uses: actions/checkout@v3
+
       - name: Déploiement vers GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
