--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,8 +19,9 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./
           force_orphan: true
+
       - name: Copier les fichiers vers Nginx
         run: |
           mkdir -p /home/debian/actions-runner/tp-eval-pweb
